--- a/src/main/resources/templates/reservation/reservationInfo.html
+++ b/src/main/resources/templates/reservation/reservationInfo.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/css/reservationInfo.css">
+    <link href="/css/reservationInfo.css" rel="stylesheet">
     <title>ReservationInfo</title>
 </head>
 <body>
@@ -10,36 +10,38 @@
 <div class="wrap">
     <div class="reserInfo">
         <h3>4. 예약 명세서 페이지</h3>
-    <form method="post" role="form" th:action="@{/customer/{id}/reservationInfo(id=${id})}" th:object="${reservation}">
-        <div>
-            <label>예약 인원수:</label>
-            <input th:field="*{members}" type="hidden"/>
-            <span th:text="${reservation.members}"></span>
-        </div>
-        <div>
-            <label>날짜:</label>
-            <input th:field="*{date}" type="hidden"/>
-            <span th:text="${reservation.date}"></span>
-        </div>
-        <div>
-            <label>Time:</label>
-            <input th:field="*{time}" type="hidden"/>
-            <span th:text="${reservation.time.detail}"></span>
-        </div>
-        <div>
-            <label>테이블 번호:</label>
-            <input th:field="*{tid}" type="hidden"/>
-            <span th:text="|${tables.number}번|"></span>
-        </div>
-        <!--        <div>-->
-        <!--            <label>선택 메뉴:</label>-->
-        <input th:field="*{orderMenuList}" type="hidden"/>
-        <!--            <ul th:each="menuId : ${reservation.orderMenuList}">-->
-        <!--                <li th:text="${menuId}"></li>-->
-        <!--            </ul>-->
-        <!--        </div>-->
-        <button class="submit" id="submit" type="submit">예약</button>
-    </form>
+        <form method="post" role="form" th:action="@{/customer/{id}/reservationInfo(id=${id})}"
+              th:object="${reservation}">
+            <div>
+                <label>예약 인원수:</label>
+                <input th:field="*{members}" type="hidden"/>
+                <span th:text="${reservation.members}"></span>
+            </div>
+            <div>
+                <label>날짜:</label>
+                <input th:field="*{date}" type="hidden"/>
+                <span th:text="${reservation.date}"></span>
+            </div>
+            <div>
+                <label>시간:</label>
+                <input th:field="*{time}" type="hidden"/>
+                <span th:text="${reservation.time.detail}"></span>
+            </div>
+
+            <div>
+                <label>테이블 번호:</label>
+                <input th:field="*{tid}" type="hidden"/>
+                <span th:text="|${tables.number}번|"></span>
+            </div>
+            <div>
+                <label>선택 메뉴:</label>
+                <input th:field="*{orderMenuList}" type="hidden"/>
+                <ul th:each="menu : ${menuList}">
+                    <li th:text="${menu.name}"></li>
+                </ul>
+            </div>
+            <button class="submit" id="submit" type="submit">예약</button>
+        </form>
     </div>
 </div>
 
